# demo-dtcc-trade-reop

./: Dockerfile  README.md  fly.toml  pyproject.toml
openbb_swaps/: __init__.py  main.py
openbb_swaps/app/: app.py  apps.json
openbb_swaps/data/: store.py  swaps_data.xz
openbb_swaps/models/: query_params.py  response_models.py
