[tool.poetry]
name = "openbb-swaps"
version = "0.0.1"
description = "An empty OpenBB Router extension"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_swaps" }]

[tool.poetry.dependencies]
python = "^3.10,<3.14"
openbb-core = "*"
openbb-platform-api = "*"
openbb-store = { version = "*", extras = ["excel"] }

[tool.poetry.scripts]
openbb-swaps = "openbb_swaps.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
